New html practice done

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Опис сторінки"> 
+    <title> Юкка в домашніх умовах </title>
+    <style>
+        #main {
+            color: coral;
+        }
+    </style>
+</head>
+<body> 
+    <h1 id="main"> Сторінка присвячена неймовірно наглій кішці на ім'я Юкка</h1>
+    <p><strong>Ця сторіна створена для того, щоб прославити на весь інтернет кішку, яка робить життя своїх господарів трішечки нестерпним </strong></p>
+    <P style="color: cyan;"><strong><em> Основні "переваги" життя з котом:</P></em></strong>
+    <ul>
+        <li>Кіт завжди тебе розбудить до будильника, навіть на вихідні</li>
+        <li>Кіт буде кричати завжди, навіть коли отримає свій смаколик</li>
+        <li>Кіт завжди радий тебе бачити але не більше ніж сам того хоче</li>
+        <li>Кіт зробить так, щоб ти ніколи не зміг зручно спати</li>
+    </ul>
+    <p style="color: darkorchid;"><em><strong>Основні недоліки життя з ктом:</em></p></strong>
+    <ol>
+        <li> ЇХ НЕМАЄ!!!</li>
+        <li> ЇХ НЕМАЄ!!!</li>
+        <li> ЇХ НЕМАЄ!!!</li>
+    </ol>
+<button>
+    <div>
+    <a href="gallery.html"> Photos </a>
+    </div>
+</button>
+<Button>   
+<div>
+    <a href="contacts.html"> Contacts </a>
+    </Button> 
+    </div>
+    <p></p>
+    <div>
+            <input type="text" name="feed me" placeholder="FEEEEEEED MEEEEE">
+    </div>
 
+</body>
