Add new css styles

--- a/contacts.html
+++ b/contacts.html
@@ -2,17 +2,18 @@
 <html lang="uk">
 <head> 
 <meta charset="UTF-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body> 
-<h1 style="color: mediumspringgreen;">Якщо Ви бажаєте накормити цю кішку та зробити її ще більш товстою, ви можете звернутись до її матері</h1>
+<h1 id="main">Якщо Ви бажаєте накормити цю кішку та зробити її ще більш товстою, ви можете звернутись до її матері</h1>
 
     <div>
-<a href="https://www.instagram.com/elina409/"> Instagram </a>
+<a class="about" href="https://www.instagram.com/elina409/"> Instagram </a>
     </div>
     <p></p>
 <button>
     <div>
-<a href="index.html"> Назад </a>
+<a class="button" href="index.html"> Назад </a>
     </div>
 </button>
 </body>
