--- a/gallery.html
+++ b/gallery.html
@@ -2,17 +2,18 @@
 <html lang="uk">
 <head> 
 <meta charset="UTF-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body> 
-<h1 style="color: brown;">Галерея товстого кота</h1>
-<img src="Youkka Photo/photo03.jpg" width="350" height="350" alt="Опис зображення">
-<img src="Youkka Photo/photo46.jpg" width="350" height="350" alt="Опис зображення">
-<img src="Youkka Photo/photo54.jpg" width="350" height="350" alt="Опис зображення">
-<img src="Youkka Photo/photo59.jpg" width="350" height="350" alt="опис зображення">
+<h1 id="main">Галерея товстого кота</h1>
+<img class="photo1" src="Youkka Photo/photo03.jpg" width="350" height="350" alt="Опис зображення">
+<img class="photo2" src="Youkka Photo/photo46.jpg" width="350" height="350" alt="Опис зображення">
+<img class="photo3" src="Youkka Photo/photo54.jpg" width="350" height="350" alt="Опис зображення">
+<img class="photo4" src="Youkka Photo/photo59.jpg" width="350" height="350" alt="опис зображення">
 <p></p>
 <button>
 <div>
-<a href="index.html"> Назад </a>
+<a class="button" href="index.html"> Назад </a>
 </div>
 </button>
 </body>
