--- a/index.html
+++ b/index.html
@@ -5,41 +5,38 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Опис сторінки"> 
     <title> Юкка в домашніх умовах </title>
-    <style>
-        #main {
-            color: coral;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css"> 
+    <style></style>
 </head>
 <body> 
     <h1 id="main"> Сторінка присвячена неймовірно наглій кішці на ім'я Юкка</h1>
-    <p><strong>Ця сторіна створена для того, щоб прославити на весь інтернет кішку, яка робить життя своїх господарів трішечки нестерпним </strong></p>
-    <P style="color: cyan;"><strong><em> Основні "переваги" життя з котом:</P></em></strong>
-    <ul>
+    <p id="head"><strong>Ця сторіна створена для того, щоб прославити на весь інтернет кішку, яка робить життя своїх господарів трішечки нестерпним </strong></p>
+    <P class="about"><strong><em> Основні "переваги" життя з котом:</P></em></strong>
+    <ul class="list">
         <li>Кіт завжди тебе розбудить до будильника, навіть на вихідні</li>
         <li>Кіт буде кричати завжди, навіть коли отримає свій смаколик</li>
         <li>Кіт завжди радий тебе бачити але не більше ніж сам того хоче</li>
         <li>Кіт зробить так, щоб ти ніколи не зміг зручно спати</li>
     </ul>
-    <p style="color: darkorchid;"><em><strong>Основні недоліки життя з ктом:</em></p></strong>
-    <ol>
+    <p class="about"><em><strong>Основні недоліки життя з ктом:</em></p></strong>
+    <ol class="list">
         <li> ЇХ НЕМАЄ!!!</li>
         <li> ЇХ НЕМАЄ!!!</li>
         <li> ЇХ НЕМАЄ!!!</li>
     </ol>
 <button>
     <div>
-    <a href="gallery.html"> Photos </a>
+    <a href="gallery.html" class="button"> Photos </a>
     </div>
 </button>
 <Button>   
 <div>
-    <a href="contacts.html"> Contacts </a>
+    <a href="contacts.html" class="button"> Contacts </a>
     </Button> 
     </div>
     <p></p>
     <div>
-            <input type="text" name="feed me" placeholder="FEEEEEEED MEEEEE">
+            <input class="field" type="text" name="feed me" placeholder="FEEEEEEED MEEEEE" >
     </div>
 
 </body>
